# xenocore

./: CMakeLists.txt
src/: cmdargs.asm  logger.asm  util.asm  xeno.asm  xeno.h  xenobyte.asm  xenocore.asm  xenocore.c
src/data/: data_table.c  data_table.h  register.asm
src/util/: basic.asm  basic.h  logger.asm  logger.h
